--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
       padding: 30px 50px;
       font-size: 30px;
       border: none;
-      background-color:linear-gradient(to right, #f9d423, #ff4e50);
+      background:  linear-gradient(to right, #00c6ff, #0072ff);
       color: black;
       border-radius: 25px;
       cursor: pointer;
       z-index: 10;
+      box-shadow: 0 0 15px rgba(0, 123, 255, 0.5);
+
     }
 
     .spam-image {
@@ -51,18 +53,19 @@
       border: none !important;
       outline: none !important;
     }
-    #top-text {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #ffdf8c;
-  font-size: 48px;
-  font-family: 'Segoe UI', sans-serif;
-  text-shadow: 2px 2px 8px black;
-  z-index: 9;
-}
 
+    #top-text {
+      position: absolute;
+      top: 40%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #ffdf8c;
+      font-size: 48px;
+      font-family: 'Segoe UI', sans-serif;
+      text-shadow: 2px 2px 8px black;
+      z-index: 9;
+
+    }
   </style>
 </head>
 <body>
@@ -84,16 +87,15 @@
     ];
 
     const manualPositions = [
-      { x: 1200, y: 50 },
-      { x: 1450, y: 1060 },
-      { x: 900, y: 550 },
-      { x: 1850, y: 470 },
-      { x: 1800, y: 150 },
-      { x: 500, y: 300 },
-      { x: 600, y: 600 },
-      { x: 850, y: 200 },
-      { x: 900, y: 900 }
-      
+      { x: 1300, y: 50 },
+      { x: 1550, y: 1060 },
+      { x: 1000, y: 550 },
+      { x: 1950, y: 470 },
+      { x: 1900, y: 150 },
+      { x: 600, y: 300 },
+      { x: 700, y: 600 },
+      { x: 950, y: 200 },
+      { x: 1000, y: 900 }
     ];
 
     document.getElementById("start-btn").addEventListener("click", () => {
@@ -117,40 +119,34 @@
       video1.src = "mck.mp4";
       video1.className = "spam-video";
       video1.style.top = "100px";
-      video1.style.left = "1650px";
+      video1.style.left = "1750px"; 
       video1.style.transform = "translateX(-50%)";
       video1.autoplay = true;
-      video1.muted = false;
       video1.loop = true;
       video1.playsInline = true;
-      video1.style.position = "absolute";
       document.body.appendChild(video1);
 
       const video2 = document.createElement("video");
       video2.src = "mck2.mp4";
       video2.className = "spam-video";
       video2.style.top = "800px";
-      video2.style.left = "1850px";
+      video2.style.left = "1950px"; 
       video2.autoplay = true;
-      video2.muted = false;
       video2.loop = true;
       video2.playsInline = true;
-      video2.style.position = "absolute";
       document.body.appendChild(video2);
 
       const video3 = document.createElement("video");
       video3.src = "mck3.mp4";
       video3.className = "spam-video";
       video3.style.top = "450px";
-      video3.style.left = "1500px";
+      video3.style.left = "1600px"; 
       video3.style.transform = "translateX(-50%)";
-      video3.autoplay = true;
-      video3.muted = false;
-      video3.loop = true;
-      video3.playsInline = true;
       video3.style.width = "1000px";
       video3.style.height = "600px";
-      video3.style.position = "absolute";
+      video3.autoplay = true;
+      video3.loop = true;
+      video3.playsInline = true;
       document.body.appendChild(video3);
 
       setTimeout(() => {
@@ -160,6 +156,5 @@
       }, 1000);
     });
   </script>
-
 </body>
 </html>
